# shadow

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: googletest-download.cmake
demos/roguelike/: CMakeLists.txt  enemy.h  health_bar.h  level.cpp  level.h  main.cpp  player.cpp  player.h
demos/roguelike/assets/levels/: level1.level  level2.level
demos/roguelike/assets/shaders/: Color.glsl  Default.glsl  Geometry.glsl
demos/snake/: CMakeLists.txt  borders.cpp  borders.h  food.cpp  food.h  main.cpp  scoreboard.h  snake.cpp  snake.h
engine/core/: CMakeLists.txt
engine/core/input/: key_codes.h
engine/core/log/: log.cpp
engine/runtime/: CMakeLists.txt
engine/runtime/application/: application.cpp  application.h  window.cpp  window.h
engine/runtime/events/: application_events.h  event.h  event_bus.cpp  event_bus.h  handler_function.h  keyboard_events.h  mouse_events.h
lib/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/glad/include/glad/: gl.h
lib/imgui/: CMakeLists.txt  imconfig.h
lib/spdlog/: CMakeLists.txt
lib/stb_image/: CMakeLists.txt
lib/stb_truetype/: CMakeLists.txt
sandbox/: CMakeLists.txt  camera_script.h  main.cpp  progress_bar.h  sample_script.h
sandbox/assets/shaders/: Default.glsl  Font.glsl  Texture.glsl
shadow/: CMakeLists.txt  shadow.h  shpch.h
shadow/application/: application.cpp  application.h  game_loop.cpp  game_loop.h  window.cpp  window.h
shadow/components/: animated_sprite.cpp  animated_sprite.h  animation_controller.cpp  animation_controller.h  animator_component.h  camera_component.h  collider_component.h  rigidbody_component.h  script_component.h  sprite.cpp  sprite.h  sprite_component.cpp  sprite_component.h  tag_component.h  texture_atlas.cpp  texture_atlas.h  transform.h  trigger_component.h  ui_component.h
shadow/core/: CMakeLists1.txt  macros.h
shadow/core/debug/: debugger.cpp  debugger.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  profiling.h  statistics.h
shadow/core/log/: log.cpp  log.h
shadow/core/math/: random.cpp  random.h
shadow/core/time/: clock.cpp  clock.h
shadow/core/utils/: file.h
shadow/ecs/: animated_sprite.cpp  animated_sprite.h  animation.cpp  animation.h  animation_controller.h  component.h  entity.h  game_object.cpp  game_object.h  pool.h  registry.cpp  registry.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  script.h  sprite.cpp  sprite.h  texture_atlas.cpp  texture_atlas.h
shadow/events/: application_events.h  event.h  event_bus.cpp  event_bus.h  event_queue.cpp  event_queue.h  handler_function.h  keyboard_events.h  mouse_events.h
shadow/input/: input.cpp  input.h  key_codes.h
shadow/physics/: collision.cpp  collision.h
shadow/renderer/: buffer.cpp  buffer.h  buffer_layout.h  camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  font.cpp  font.h  graphics_context.cpp  graphics_context.h  render.cpp  render.h  shader.cpp  shader.h  sub_texture.cpp  sub_texture.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
shadow/scene/: scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
shadow/ui/: label.cpp  label.h  ui.cpp  ui.h  ui_block.cpp  ui_block.h  ui_container.h
snake/: CMakeLists.txt  food.h  main.cpp  snake.cpp  snake.h
tests/: CMakeLists.txt  event_tests.cpp
